# witness-core

./: .coveragerc  .coveragerc copy  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AutoCompleteHeaders  CREDITS.rst  HeadersIgnoreConfig.py  LICENSE  MANIFEST.in  NOTICE  Pipfile  Pipfile.lock.txt  Pipfile.txt  README.md  _sidebar.md  default_process_rights.yaml  headers_ignore_config.json  index.html  l1errors_data_integrirty.txt  nose2.cfg  parameters_glossary.csv  pyproject.toml  pytest.ini  q  requirements.in  requirements.txt  ruff.toml  run_pylint.bat  setup.py  strategy.py  q
LICENSES/headers/: Apachev2.0.txt
climateeconomics/: README.md  _sidebar.md  charts_tools.py  database_witness_core.py  glossary.py  glossarycore.py
climateeconomics/calibration/: output_calibration_agriculture.json  run_calibration_agriculture.py
climateeconomics/core/: README.md  _sidebar.md
climateeconomics/data/: GDP projections - SSP3 and from actual 2020 GDP.ipynb  GDP_OECD.csv  GDP_data_preprocessing_model.ipynb  IEA_NZE_CO2_100.csv  IEA_NZE_CO2_tax.csv  IEA_NZE_EnergyMix.biogas.Energy Production Quantity Detailed.csv  IEA_NZE_EnergyMix.biogas.energy_production_detailed.csv  IEA_NZE_EnergyMix.electricity.Hydropower.techno_production.csv  IEA_NZE_EnergyMix.electricity.Nuclear.techno_production.csv  IEA_NZE_EnergyMix.electricity.SolarPv.techno_production.csv  IEA_NZE_EnergyMix.electricity.WindXXshore.techno_production.csv  IEA_NZE_EnergyMix.energy_production_brut_detailed.csv  IEA_NZE_EnergyMix.methane.FossilGas.techno_detailed_production.csv  IEA_NZE_EnergyMix.methane.FossilGas.techno_prices.csv  IEA_NZE_EnergyMix_solid_fuel_CoalExtraction_techno_production.csv  IEA_NZE_Land_Use.land_surface_detail_df.csv  IEA_NZE_co2_emissions_Gt.csv  IEA_NZE_crop_detailed_mix_production.csv  IEA_NZE_crop_mix_detailed_production.csv  IEA_NZE_electricity_Technologies_Mix_prices.csv  IEA_NZE_energy_final_consumption.csv  IEA_NZE_energy_production_brut.csv  IEA_NZE_forest_Technology_Production_Quantities.csv  IEA_NZE_forest_techno_production.csv  IEA_NZE_output_net_of_d.csv  IEA_NZE_population.csv  IEA_NZE_temp_atmo.csv  NZE_IEA_2050_total_energy_supply.csv  agriculture_sector_capital.csv  agriculture_sector_investments.csv  capitals.csv  ccus_historic_invests.csv  ch4_annmean_gl.csv  climate_additional_deaths.csv  climate_additional_deaths_V2.csv  co2_annmean_mlo.csv  countries_per_region.json  crop_energy_historic_prod.csv  crop_investment_nze.csv  death_rate_params.csv  (+50 more)
climateeconomics/database/: __init__.py  collected_data.py  database_witness_core.py
climateeconomics/sos_processes/: README.md  _sidebar.md
data_energy/: value_added_by_sector .py  value_added_division.py
docs/: requirements.txt
documentation/: future_developments.md  how_to_model_a_study.md
scripts/: run_all_tests.bat
tools/: design_space_creator.py
(+2212 files in other folders)
